Add parameter in the live_config.html application
Global parameters inserted via a tag in head host document #185

--- a/applications/live_config.html
+++ b/applications/live_config.html
@@ -27,6 +27,8 @@
 	<a href="#generated_html">Generated html</a>
 	<a href="#configurator_css">Configure css</a>
 	<a href="#generated_css">Generated css</a>
+	<a href="#configurator_paramtag">Global parameters</a>
+	<a href="#generated_paramtag">Generated global parameters</a>
 	<span id="spacer">&nbsp;</span>
 	<button type="button" id="do_fine" title="A long press on the time line will display this alternate interface">Fine position</button>
 	<button type="button" id="do_waiting" title="A state occuring during a play, when the browser is still waiting for audio data">Do loading</button>
@@ -275,213 +277,89 @@
 </style></pre>
 </div>
 
-<script>
+<form id="configurator_paramtag" action="#generated_paramtag" class="pan">
 
-const form_html = document.getElementById('configurator_html');
-const form_css = document.getElementById('configurator_css');
-let cpu_audio = document.querySelector('cpu-audio');
+<fieldset>
 
-function configurator_html(event) {
-}
-document.addEventListener('CPU_ready', () => {
-	cpu_audio = document.querySelector('cpu-audio');	
-})
+	<p>
+		Please note : Some of those parameters cannot be changed live in this page.
+	</p>
 
+	<p>
+		<span class="what">Autoplay</span>
+		<label for="global_autoplay">
+			<input type="checkbox" value="true"  id="global_autoplay" name="global_autoplay" />
+				Will try to play at the start of the page if a temporal URL is given or the audio was previously exited. Default : unactivated. This may be prevented by your browser.
+		</label>
+	</p>
+	<p>
+		<span class="what">keymove</span>
+		<label for="global_keymove">
+			<input type="number" value="5" min="1" max="300" id="global_keymove" name="global_keymove" size="5" />
+			 seconds skipped in the timeline with <kbd>←</kbd> or <kbd>→</kbd> keys. Default : 5 seconds.
+		</label>
+	</p>
+	<p>
+		<span class="what">playStopOthers</span>
+		<label for="global_playStopOthers">
+			<input type="checkbox" value="true" checked id="global_playStopOthers" name="global_playStopOthers" />
+				When a <code>&lt;cpu-audio&gt;</code> starts to play, any other instances in the same page are paused. Default : activated
+		</label>
+	</p>
+	<p>
+		<span class="what">alternateDelay</span>
+		<label for="global_alternateDelay">
+			<input type="number" value="1000" min="100" max="3000" step="100" id="global_alternateDelay" name="global_alternateDelay" size="5" />
+				milliseconds of long press on time-line to switch to the handheld alternate browsing interface. Not recommended to modify. Default : 1 000 ms
+		</label>
+	</p>
+	<p>
+		<span class="what">fastFactor</span>
+		<label for="global_fastFactor">
+			<input type="number" value="4" min="2" max="10" id="global_fastFactor" name="global_fastFactor" size="5" />
+				amplification ratio between <kbd>▸︎▸︎</kbd> and <kbd>▸︎▸︎▸︎</kbd> in handheld alternate browsing interface. Default : 4 ×
+		</label>
+	</p>
+	<p>
+		<span class="what">repeatDelay</span>
+		<label for="global_repeatDelay">
+			<input type="number" value="400" min="100" max="2000" step="50" id="global_repeatDelay" name="global_repeatDelay" size="5" />
+				milliseconds delay before first repetition when clicking a button in handheld alternate browsing interface. Default : 400 ms
+		</label>
+	</p>
+	<p>
+		<span class="what">repeatFactor</span>
+		<label for="global_repeatFactor">
+			<input type="number" value="100" min="10" max="2000" step="10" id="global_repeatFactor" name="global_repeatFactor" size="5" />
+				milliseconds delay before repeating when clicking a button in handheld alternate browsing interface. Default : 100 ms
+		</label>
+	</p>
+	<p>
+		<span class="what">advanceInPlaylist</span>
+		<label for="global_advanceInPlaylist">
+			<input type="checkbox" value="true" checked id="global_advanceInPlaylist" name="global_advanceInPlaylist" />
+				When an audio is ended in a playlist, starts immediatly the next one. Default : activated.
+		</label>
+	</p>
 
-function configurator_html(event) {
-	let cpu_audio_attributes = '';
-	let audio_sources = '';
-	let has_one_source = false;
+</fieldset>
 
-	function esc(text) {
-		let burn_after_reading = document.createElement('span');
-		burn_after_reading.innerText = text;
-		let out = burn_after_reading.innerHTML;
-		burn_after_reading.remove();
-		return out;
-	}
+<button type="reset">Reset values</button>
+<button type="submit">See result HTML code</button>
 
-	function adjust_attributes_cpu_audio() {
-		for (let attr of ['mode', 'title', 'poster', 'waveform', 'canonical', 'duration', 'download', 'twitter']) {
-			let value = form_html.querySelector(`[name="meta_${attr}"]`).value;
-			if (value) {
-				cpu_audio_attributes += ` ${attr}="${esc(value)}"`;
-			}
-		}
-		values_hide = []
-		for (let checkbox of Array.from(document.querySelectorAll('[name="meta_hide[]"]'))) {
-			if (checkbox.checked) {
-				values_hide.push(checkbox.value);
-			}
-		}
-		if (values_hide.length > 0) {
-			cpu_audio_attributes += ` hide="${values_hide.join(' ')}"`;
-		}
-		for (let attr of ['glow']) {
-			if (form_html.querySelector(`[name="meta_${attr}"]`).checked) {
-				cpu_audio_attributes += ` ${attr}`;
-			}
-		} 
-	}
-	function adjust_audio_sources() {
-		for (let attr of ['1', '2', '3', 'vtt']) {
-			let value = form_html.querySelector(`[name="source_${attr}"]`).value;
-			if (value) {
-				if (attr === 'vtt') {
-					audio_sources += `\n\t\t<track src="${esc(value)}" kind="chapters" default />`;
-				} else {
-					let kind = form_html.querySelector(`[for="source_${attr}"] select`);
-					has_one_source = true;
-					audio_sources += `\n\t\t<source src="${esc(value)}" type="${esc(kind.value)}" />`;
-				}
-			}
-		}
-	}
+</form>
 
-	adjust_attributes_cpu_audio();
-	adjust_audio_sources();
+<div class="pan" id="generated_paramtag">
+	Copy and paste this HTML code in the <code>&lt;head&gt;</code> before the <code>&lt;script&gt;</code> tag calling cpu-audio.js :
 
-	if (!has_one_source) {
-		// ajouter les erreurs
-	}
-
-	let audio_attribs = '';
-	if (cpu_audio_attributes.includes(' duration="')) {
-		audio_attribs = ' preload="none"';
-	}
-	if (form_html.querySelector(`[name="is_stream"]`).checked) {
-		audio_attribs = ' data-streamed';
-	}
-
-	let code = `<cpu-audio${cpu_audio_attributes}>
-	<audio controls id="sound"${audio_attribs}>${audio_sources}
-\t</audio>
-</cpu-audio>`;
-	document.getElementById('demo').innerHTML = code;
-	document.getElementById('code').innerText = code;
-	//cpu_audio = document.querySelector('cpu-audio');
-	
-	event?.preventDefault();
-}
-
-function configurator_css(event) {
-
-	function input_changed(element) {
-		return element.value !== element.attributes.value.value;
-	}
-
-	let css = '';
-	let attrs = ['font-family', 'inner-shadow' ,'color-transitions','background-transitions', 'line-height'];
-	for (let key of ['','error-','playing-','focus-','popup-']) {
-		for (let attr of ['color','background']) {
-			attrs.push(`${key}${attr}`);
-		}
-	}
-
-	for (let attr of attrs) {
-		let element = form_css.querySelector(`[name="css_${attr}"]`);
-		let value = element.value;
-		if ((input_changed(element)) && (value !== '')) {
-
-			// duration need unit
-			if (['color-transitions', 'background-transitions'].includes(attr)) {
-				value = value +'s';
-			}
-
-			css += `\n\t--cpu-${attr} : ${value};`;
-		}
-	}
-
-	if (css !== '') {
-		css = `body {\n${css}\n}`;
-	}
-
-	for (let level of ['0', '1', '2']) {
-		let rules_breakpoint = '';
-		for(let attr of ['elapse-width', 'font-size', 'font-small-size', 'height']) {
-			let element = form_css.querySelector(`[name="css_${attr}[${level}]"]`);
-			let value = element.value;
-			if ((input_changed(element)) && (value !== '')) {
-				rules_breakpoint += `\n\t\t--cpu-${attr} : ${value};`;
-			}
-		}
-
-		if (rules_breakpoint !== '') {
-			if (level === '0') {
-				css += `\n\nbody, #interface {\n${rules_breakpoint}\n}`;
-			} else {
-				let max_width = form_css.querySelector(`[name="css_breakpoint[${level}]"]`).value;
-				if (max_width !== '') {
-					css += `\n\n@media (max-width: ${max_width}) , @element #interface and (max-width: ${max_width}) {\n\tbody, #interface {${rules_breakpoint}\n\t}\n} `;
-				}
-			}
-		}
-	}
-
-	document.getElementById('style').innerHTML = css;
-	
-	event?.preventDefault();
-}
-
-function noop(event) {
-	document.location.hash = '#' + event.target.action.split('#')[1];
-	event.preventDefault();
-}
-
-function reset(event) {
-	const event_change = new Event('change');
-	setTimeout( () => event.target.dispatchEvent(event_change), 100);
-}
-
-document.addEventListener('DOMContentLoaded', function(){
-	for (let event of ['input', 'change' ]) {
-		form_html.addEventListener(event, configurator_html);
-		form_css.addEventListener(event, configurator_css);
-	}
-	form_html.addEventListener('reset', reset);
-	form_css.addEventListener('reset', reset);
-	form_html.addEventListener('submit', noop);
-	form_css.addEventListener('submit', noop);
-	configurator_html();
-	document.location.hash = '#'+form_html.id; 
+	<pre></pre>
+	<p>
+		Beware to have a strict and valid JSON object.
+	</p>
+</div>
 
 
-	let in_error = false;
-	function leave_in_error_mode() {
-		if (in_error) {
-			cpu_audio.CPU.show('main');
-			cpu_audio.CPU.shadowId('pageerror').innerText = '';
-			in_error = false;
-		}
-	}
-
-	document.querySelector('#do_fine').addEventListener('click', function() {
-		leave_in_error_mode();
-		cpu_audio.CPU.showHandheldNav();
-	});
-	document.querySelector('#do_waiting').addEventListener('click', function() {
-		leave_in_error_mode();
-		cpu_audio.CPU.audiotag.pause();
-		document.CPU.hadPlayed = true;
-		cpu_audio.CPU.setAct('loading');
-	});
-	document.querySelector('#do_glow').addEventListener('click', function() {
-		leave_in_error_mode();
-		cpu_audio.CPU.audiotag.pause();
-		cpu_audio.CPU.setAct('glow');
-	});	
-	document.querySelector('#do_error').addEventListener('click', function() {
-		if (!in_error) {
-			cpu_audio.CPU.show('error');
-			cpu_audio.CPU.shadowId('pageerror').innerText = 'This is an error message.';
-			in_error = true;
-		} else {
-			leave_in_error_mode();
-		}
-	});
-}, false);
-
-</script>
+<script src="./live_config.js"></script>
 
 <style>
 
