--- a/applications/live_config.html
+++ b/applications/live_config.html
@@ -286,9 +286,16 @@
 	</p>
 
 	<p>
+		<span class="what">scrollTo</span>
+		<label for="global_scrollTo">
+			<input type="checkbox" value="true" checked id="global_scrollTo" name="global_scrollTo" />
+				On any link to a time-stamp in the page, will scroll the viewport to display the playing interface. Default : activated.
+		</label>
+	</p>
+	<p>
 		<span class="what">Autoplay</span>
 		<label for="global_autoplay">
-			<input type="checkbox" value="true"  id="global_autoplay" name="global_autoplay" />
+			<input type="checkbox" value="true" id="global_autoplay" name="global_autoplay" />
 				Will try to play at the start of the page if a temporal URL is given or the audio was previously exited. Default : unactivated. This may be prevented by your browser.
 		</label>
 	</p>
