To avoid bad behavior, default setting scrollTo is set on disabled
Parametrable : scroll to the audio element #60

--- a/applications/live_config.html
+++ b/applications/live_config.html
@@ -288,7 +288,7 @@
 	<p>
 		<span class="what">scrollTo</span>
 		<label for="global_scrollTo">
-			<input type="checkbox" value="true" checked id="global_scrollTo" name="global_scrollTo" />
+			<input type="checkbox" value="true" id="global_scrollTo" name="global_scrollTo" />
 				On any link to a time-stamp in the page, will scroll the viewport to display the playing interface. Default : activated.
 		</label>
 	</p>
