--- a/applications/live_config.html
+++ b/applications/live_config.html
@@ -335,7 +335,7 @@
 </fieldset>
 
 <fieldset>
-	<legend>Fine navigation</legend>
+	<legend>Precise navigation with fingers</legend>
 	<p>
 		<span class="what">alternateDelay</span>
 		<label for="global_alternateDelay">
