--- a/examples.html
+++ b/examples.html
@@ -20,4 +20,5 @@
 <li><a href='tests/tests-controller.html'>tests/tests-controller.html</a></li>
 <li><a href='tests/tests-interface.html'>tests/tests-interface.html</a></li>
 <li><a href='tests/tests-minimal.html'>tests/tests-minimal.html</a></li>
+<li><a href='tests/tests-parameters.html'>tests/tests-parameters.html</a></li>
 </ul>
