Creating a `globalCss` parameter
Being able to not include global.css on host page #181

--- a/applications/live_config.html
+++ b/applications/live_config.html
@@ -313,6 +313,17 @@
 </fieldset>
 
 <fieldset>
+	<legend>Interface aspect</legend>
+	<p>
+		<span class="what">globalCss</span>
+		<label for="global_globalCss">
+			<input type="checkbox" value="true" checked id="global_globalCss" name="global_globalCss" />
+				Insert in the <code>&lt;head&gt;</code> of the host document a specific <code>&lt;style&gt;</code> with all needed css variables for the player. Default : activated. Beware to not activate it if any of the needed css variables are not inserted by your side.
+		</label>
+	</p>
+</fieldset>
+
+<fieldset>
 	<legend>Playlist interactions</legend>
 	<p>
 		<span class="what">advanceInPlaylist</span>
