--- a/applications/live_config.html
+++ b/applications/live_config.html
@@ -310,6 +310,15 @@
 				Will try to play at the start of the page if a temporal URL is given or the audio was previously exited. Default : unactivated. This may be prevented by your browser.
 		</label>
 	</p>
+	<p>
+		<span class="what">IDPrefix</span>
+		<label for="global_IDPrefix">
+			<input type="text" pattern="^[\w-]{2,}\-$" value="CPU-Audio-tag-" id="global_IDPrefix" name="global_IDPrefix" />
+				A minimum of 2 letters (or "-" or "_"), then a final dash are recommended. Default : <code>CPU-Audio-tag-</code>.
+		</label>
+	</p>
+
+
 </fieldset>
 
 <fieldset>
